syntax = "proto3";

package com.cramium.sdk;
option java_multiple_files = true;
option java_package = "com.cramium.activecard";

message BroadcastExchangeMessage {
  string group_id = 1;
  bytes msg = 2;
}