syntax = "proto3";

package com.cramium.sdk;
option java_multiple_files = true;
option java_package = "com.cramium.activecard";

message InitiateMnemonicKeyGen {
  string group_id = 1;
  uint64 secret_number = 2;
}