syntax = "proto3";

package com.cramium.sdk;
option java_multiple_files = true;
option java_package = "com.cramium.activecard";

message SignedNonce {
  // ECDSA Signature of the nonce using firmware's private key
  bytes signature = 1;
}